--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".CitiesActivity"
+                android:name=".views.CitiesActivity"
                 android:label="@string/title_activity_cities"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
@@ -32,7 +32,7 @@
                 android:value="@string/google_maps_key"/>
 
         <activity
-                android:name=".MapsActivity"
+                android:name=".views.MapsActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
